[package]
name = "kvs"
version = "0.1.0"
authors = ["BruParis <parisbruno85@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3.1"
predicates = "1.0.0"
rand = "0.7.3"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "benches"
harness = false

[dependencies]
slog = { version = "2.0.0-2.1" , features = ["max_level_trace", "release_max_level_warn"] }
slog-term = "2.4.2"
slog-async = "2.0.0-2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.6"
failure_derive = "0.1.6"
clap = { features = ["yaml"] }
dotenv_codegen = "0.15.0"
sled = "0.30.3"
rand = "0.7.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3